--- a/public/css/body.css
+++ b/public/css/body.css
@@ -1,4 +1,19 @@
-.body{
-    position: relative;
-    height: 600px;
+@media only screen and (max-width: 768px){
+    .body{
+        display: inline-block;
+        margin-top: 100px;
+    }
+}
+
+@media only screen and (min-width: 768px)
+                    and (max-width: 992px){
+    .body{
+        margin-top: 80px;
+    }
+}
+
+@media only screen and (min-width: 992px){
+    .body{
+        margin-top: 80px;
+    }
 }
