--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -3,6 +3,9 @@
 }
 
 @media only screen and (max-width: 768px){
+    .footer{
+        display: inline-block;
+    }
     .main-footer{
         width: 80%;
         margin-left: 10%;
